<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stations Timer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_run">Run</string>
    <string name="edit_timeTotal">Time Total</string>
    <string name="edit_timeStep">Time Step</string>
    <string name="title_activity_display_message">TIMER</string>
    <string name="cronText">Cron Running, GO GO!</string>
    <string name="timeTotal">Total Time:</string>
    <string name="timeTotalValue">a</string>
    <string name="timeLap">Time Lap:</string>
    <string name="timeLapValue">b</string>
    <string name="title_activity_notification">Notification</string>
    <string name="notificationDetail">Current station-Time Out</string>

</resources>
